Fix file type wrapping

--- a/indico/modules/events/editing/client/js/components/FileManager/FileManager.module.scss
+++ b/indico/modules/events/editing/client/js/components/FileManager/FileManager.module.scss
@@ -36,8 +36,8 @@
     .file-type {
         overflow: hidden;
 
-        &:not(:nth-child(3)) {
-            margin-right: 1em;
+        &:not(:nth-child(3n)) {
+            margin-right: 0.9em;
         }
 
         margin-bottom: 1em;
